--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,6 @@ dependencies {
     def version = '1.1.1'
     implementation "android.arch.lifecycle:extensions:$version"
     annotationProcessor "android.arch.lifecycle:compiler:$version"
-
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -43,5 +42,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     // CardView
     implementation 'com.android.support:cardview-v7:28.0.0'
-
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
