--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity"
+        <activity
+            android:name=".HomeActivity"
             android:screenOrientation="portrait">
+
 
         </activity>
         <activity
-            android:name=".AuthenticationActivity"
+            android:name=".authentication.AuthenticationActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".SplashActivity"
